--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="ankit.jpg" alt="Ankit's profile picture"></td>
+      <td><img src="cv/ankit.jpg" alt="Ankit's profile picture"></td>
       <td>
         <h1>Ankit Sajwan</h1>
         <p><em>Founder and CEO of <strong><a href="tenmoons.com">Ten Moons</a></strong></em></p>
