--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://scontent-del1-2.cdninstagram.com/v/t51.2885-19/s150x150/13151086_237492946608626_34156626_a.jpg?_nc_ht=scontent-del1-2.cdninstagram.com&_nc_ohc=5V9evq3T9q0AX-5tLIj&tp=1&oh=c1205e9f05f5f94d8e50ad530bc6d748&oe=6011D787" alt="Ankit's profile picture"></td>
+      <td><img src="images/ankit.jpg" alt="Ankit's profile picture"></td>
       <td>
         <h1>Ankit Sajwan</h1>
         <p><em>Founder and CEO of <strong><a href="tenmoons.com">Ten Moons</a></strong></em></p>
